added de, es, fr, ja, pt-BR, ru

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -17,8 +17,8 @@
   "background.error.hint.admin.docspace-connection": "Bitte gehen Sie zu den Verbindungseinstellungen, um die Einstellungen der ONLYOFFICE DocSpace App zu konfigurieren.",
   "background.error.hint.docspace-connection": "Bitte wenden Sie sich an den Administrator.",
   "background.error.hint.webhook.is-not-installed": "Die Synchronisierung zwischen Deal-Followern und Raummitgliedern findet aufgrund einer Webhook-Fehlfunktion nicht statt.",
-  "button.back": "",
-  "button.deals": "",
+  "button.back": "Zurück",
+  "button.deals": "Zu Deals",
   "button.reauthorize": "Erneut autorisieren",
   "button.settings": "Einstellungen öffnen",
   "button.create.room": "Raum erstellen",
@@ -28,13 +28,13 @@
   "button.connect": "Verbinden",
   "button.change": "Ändern",
   "button.cancel": "Abbrechen",
-  "button.create-api-key": "",
-  "button.forgot-password": "",
-  "button.finish": "",
-  "button.next": "",
-  "button.open-in-docspace": "",
+  "button.create-api-key": "Schlüssel erstellen",
+  "button.forgot-password": "Passwort vergessen?",
+  "button.finish": "Beenden",
+  "button.next": "Weiter",
+  "button.open-in-docspace": "In DocSpace öffnen",
   "button.save": "Speichern",
-  "button.skip": "",
+  "button.skip": "Überspringen",
   "button.reinstall": "App neu installieren",
   "button.request-access": "Zugang beantragen",
   "docspace.error.unreached": "ONLYOFFICE DocSpace ist nicht erreichbar.",
@@ -42,77 +42,77 @@
   "docspace.error.loading": "Fehler beim Laden von ONLYOFFICE DocSpace",
   "docspace.error.payment": "Das Erstellen dieses Raums ist nicht möglich, da das Limit für die Anzahl der Räume in Ihrem aktuellen Plan erreicht ist.",
   "docspace.link.payments": "Preisplan aktualisieren",
-  "docspace.room.type.form-filling-room": "",
+  "docspace.room.type.form-filling-room": "Raum zum Ausfüllen von Formularen",
   "docspace.room.type.collaboration": "Raum für Zusammenarbeit",
   "docspace.room.type.public": "Öffentlicher Raum",
-  "docspace.room.type.vdr": "",
+  "docspace.room.type.vdr": "Virtueller Datenraum (VDR)",
   "docspace.room.type.custom": "Benutzerdefinierter Raum",
-  "docspace.room.type.form-filling-room.short-description": "",
-  "docspace.room.type.collaboration.short-description": "",
-  "docspace.room.type.public.short-description": "",
-  "docspace.room.type.vdr.short-description": "",
-  "docspace.room.type.custom.short-description": "",
-  "docspace.room.type.form-filling-room.description": "",
-  "docspace.room.type.collaboration.description": "",
-  "docspace.room.type.public.description": "",
-  "docspace.room.type.vdr.description": "",
-  "docspace.room.type.custom.description": "",
+  "docspace.room.type.form-filling-room.short-description": "Um Daten in PDF-Formularen zu sammeln",
+  "docspace.room.type.collaboration.short-description": "Um Dokumente gemeinsam mit Ihrem Team zu bearbeiten",
+  "docspace.room.type.public.short-description": "Um Dateien mit externen Nutzern und Kunden zu teilen",
+  "docspace.room.type.vdr.short-description": "Um erweiterten Dateischutz zu bieten",
+  "docspace.room.type.custom.short-description": "Um den Raum für individuelle Zwecke zu nutzen",
+  "docspace.room.type.form-filling-room.description": "Um Daten durch Ausfüllen von PDF-Formularen zu erfassen.",
+  "docspace.room.type.collaboration.description": "Um in Echtzeit gemeinsam an Dokumenten, Tabellen und Präsentationen zu arbeiten.",
+  "docspace.room.type.public.description": "Um Dokumente ohne Registrierung mit externen Nutzern zu teilen.",
+  "docspace.room.type.vdr.description": "Um vertrauliche Informationen sicher zu speichern und auszutauschen, beispielsweise im Rahmen einer Due Diligence.",
+  "docspace.room.type.custom.description": "Um flexible Zugriffs- und Rollenkonfigurationen für verschiedene Anwendungsfälle zu nutzen.",
   "error.common": "Etwas ist schief gelaufen. Bitte laden Sie die App neu.",
-  "error.empty-field": "",
-  "error.incorrect-docspace-address": "",
-  "label.warning": "",
-  "link.learn-more-room-types": "",
+  "error.empty-field": "Bitte füllen Sie dieses Feld aus",
+  "error.incorrect-docspace-address": "Falsche DocSpace-Adresse, bitte versuchen Sie es erneut",
+  "label.warning": "Warnung",
+  "link.learn-more-room-types": "Erfahren Sie mehr über Raumtypen.",
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
-  "room.create.description": "",
-  "room.login.description": "",
+  "room.create.description": "Erstellen Sie einen ONLYOFFICE DocSpace-Raum, um mit Dokumenten zu arbeiten, die sich auf diesen Deal beziehen.",
+  "room.login.description": "Melden Sie sich bei ONLYOFFICE DocSpace an, um in diesem Deal an Dokumenten zusammenzuarbeiten",
   "room.request-access.ok": "Sie haben erfolgreich Zugang zum ONLYOFFICE DocSpace-Raum erhalten",
   "room.request-access.error": "Fehler beim Erhalten des Zugangs zum ONLYOFFICE DocSpace-Raum",
-  "room.request-access.forbidden": "",
+  "room.request-access.forbidden": "Fehler beim Zugriff auf den ONLYOFFICE DocSpace-Raum, da der aktuelle Benutzer kein Deal-Follower ist.",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gelöscht",
-  "settings.authorization.deleting.confirm-message": "",
+  "settings.authorization.deleting.confirm-message": "Möchten Sie sich wirklich abmelden?",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gespeichert",
-  "settings.authorization.unsuccessful": "",
+  "settings.authorization.unsuccessful": "Ungültige Autorisierungsinformationen. Bitte überprüfen Sie Ihre E-Mail-Adresse und Ihr Passwort und versuchen Sie erneut, sich anzumelden.",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace-Autorisierung konnte nicht gespeichert werden",
-  "settings.authorization.title": "",
+  "settings.authorization.title": "Melden Sie sich bei Ihrem verbundenen ONLYOFFICE DocSpace an, um es in Pipedrive zu verwenden",
   "settings.authorization.subtitle.address": "Ihre verbundene DocSpace-Adresse ist",
   "settings.authorization.status.authorized": "Sie haben sich erfolgreich bei Ihrem ONLYOFFICE DocSpace-Konto angemeldet.",
   "settings.authorization.inputs.email": "E-Mail",
   "settings.authorization.inputs.password": "Passwort",
   "settings.authorization.menu-item": "Autorisierung",
-  "settings.authorization.welcome.title": "",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.open-guide": "",
+  "settings.authorization.welcome.title": "Willkommen bei DocSpace!",
+  "settings.authorization.welcome.option1": "Erstellen Sie einen Raum im Deal",
+  "settings.authorization.welcome.option2": "Laden Sie ein Dokument in den Raum hoch",
+  "settings.authorization.welcome.open-guide": "Leitfaden öffnen",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace-Einstellungen konnten nicht gespeichert werden",
-  "settings.connection.saving.error.common-invalid-api-key": "",
+  "settings.connection.saving.error.common-invalid-api-key": "Ungültiger DocSpace-API-Schlüssel, bitte versuchen Sie es erneut",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace ist nicht erreichbar",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
-  "settings.connection.saving.ok": "",
-  "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Ungültiger API-Schlüssel. Bitte überprüfen Sie Ihren API-Schlüssel und versuchen Sie erneut, eine Verbindung herzustellen.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Ungültiger API-Schlüssel. Stellen Sie sicher, dass der Autor des API-Schlüssels der DocSpace-Administrator ist, und versuchen Sie erneut, eine Verbindung herzustellen.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "Ungültiger API-Schlüssel. Bitte überprüfen Sie die Zugriffsbereiche für den API-Schlüssel in DocSpace und versuchen Sie erneut, eine Verbindung herzustellen.",
+  "settings.connection.saving.ok": "Die ONLYOFFICE DocSpace-Verbindungseinstellungen wurden erfolgreich gespeichert. Sie können nun mit der Autorisierung fortfahren.",
+  "settings.connection.status.connected": "Ihr DocSpace wurde erfolgreich verbunden",
+  "settings.connection.disconnection.description": "Wenn Sie auf die Schaltfläche Trennen klicken, haben Sie keinen Zugriff mehr auf ONLYOFFICE DocSpace. Dadurch werden die Verbindungen zwischen Räumen und Deals entfernt und alle Benutzer getrennt.",
   "settings.connection.disconnection.ok": "Verbindung zu ONLYOFFICE DocSpace erfolgreich unterbrochen",
   "settings.connection.disconnection.error": "Die Verbindung zu ONLYOFFICE DocSpace konnte nicht unterbrochen werden.",
   "settings.connection.title": "Konfigurieren Sie die Verbindungseinstellungen der ONLYOFFICE DocSpace-App",
   "settings.connection.subtitle.connect": "Verbinden Sie Ihren ONLYOFFICE DocSpace mit Pipedrive",
   "settings.connection.subtitle.change": "Ändern Sie die Adresse oder trennen Sie Ihren ONLYOFFICE DocSpace von Pipedrive",
   "settings.connection.inputs.url.title": "Adresse von ONLYOFFICE DocSpace",
-  "settings.connection.inputs.url.description": "",
+  "settings.connection.inputs.url.description": "Geben Sie die URL Ihres DocSpace in das Feld oben ein. Beispiel: https://yourcompany.onlyoffice.com",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API-Schlüssel",
-  "settings.connection.inputs.api-key.tooltip": "",
+  "settings.connection.inputs.api-key.tooltip": "Bevor Sie die App verbinden, öffnen Sie bitte Ihren DocSpace, erstellen Sie einen neuen API-Schlüssel und geben Sie ihn hier ein. Sie können Berechtigungen (Alle) wählen oder eingeschränkten Zugriff mit den folgenden erforderlichen Bereichen für die ordnungsgemäße App-Funktionalität festlegen: Profil (Lesen), Kontakte (Schreiben) und Räume (Schreiben).",
   "settings.connection.menu-item": "Verbindung",
-  "user-guide.page.1.title": "",
-  "user-guide.page.1.step.1": "",
-  "user-guide.page.1.step.2": "",
-  "user-guide.page.1.step.3": "",
-  "user-guide.page.2.title": "",
-  "user-guide.page.2.step.1": "",
-  "user-guide.page.2.step.2": "",
-  "user-guide.page.3.title": "",
-  "user-guide.page.3.step.1": "",
-  "user-guide.page.3.step.2": "",
-  "user-guide.page.3.step.3": "",
-  "user-guide.page.3.step.4": ""
+  "user-guide.page.1.title": "Räume erstellen",
+  "user-guide.page.1.step.1": "Beginnen Sie mit der Erstellung eines DocSpace-Raums direkt aus einer Deal-Karte in Pipedrive.",
+  "user-guide.page.1.step.2": "Jeder Raum wird automatisch nach dem Deal benannt, zum Beispiel: Deal - [Dealname]",
+  "user-guide.page.1.step.3": "So bleiben Ihre Dokumente organisiert und direkt mit dem Deal verknüpft.",
+  "user-guide.page.2.title": "Zugriffsberechtigungen synchronisieren",
+  "user-guide.page.2.step.1": "Legen Sie Berechtigungen für jeden Raumteilnehmer fest. Sie können den Zugriff für Teammitglieder, Kunden oder externe Mitarbeiter gewähren oder einschränken.",
+  "user-guide.page.2.step.2": "Dies gewährleistet einen sicheren Dokumentenaustausch und eine rollenbasierte Zusammenarbeit.",
+  "user-guide.page.3.title": "Dokumente erstellen oder hochladen",
+  "user-guide.page.3.step.1": "Sobald der Raum eingerichtet ist, können Sie:",
+  "user-guide.page.3.step.2": "Vorhandene Dateien hochladen: DOCX, XLSX, PPTX, PDF usw.",
+  "user-guide.page.3.step.3": "Neue Dateien direkt im Raum erstellen: Textdokumente, Tabellenkalkulationen oder Präsentationen.",
+  "user-guide.page.3.step.4": "Alle Dateien werden gespeichert und mit dem entsprechenden Deal verknüpft."
 }
