--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -1,14 +1,14 @@
 ﻿{
-  "background.error.title.common": "",
-  "background.error.title.docspace-invalid-api-key": "",
+  "background.error.title.common": "Algo salió mal",
+  "background.error.title.docspace-invalid-api-key": "La clave de la API de ONLYOFFICE DocSpace es inválido.",
   "background.error.title.token-expired": "El token de seguridad del documento ha expirado",
   "background.error.title.create-room": "Lo sentimos, no tiene permiso para crear salas",
   "background.error.title.no-room-access": "Lo sentimos, no tiene acceso a esta sala",
-  "background.error.title.not-available": "",
-  "background.error.title.unreached": "",
-  "background.error.title.webhook.is-not-installed": "",
-  "background.error.subtitle.common": "",
-  "background.error.subtitle.token-expired": "",
+  "background.error.title.not-available": "Aún no disponible",
+  "background.error.title.unreached": "No se puede acceder",
+  "background.error.title.webhook.is-not-installed": "Advertencia de sincronización",
+  "background.error.subtitle.common": "No se pudieron obtener los ajustes del plugin. Por favor, vuelve a cargar la ventana de Pipedrive.",
+  "background.error.subtitle.token-expired": "El token de seguridad del documento ha expirado. Por favor, vuelve a autorizar la aplicación.",
   "background.error.subtitle.plugin.not-active.message": "La aplicación ONLYOFFICE DocSpace todavía no está disponible.",
   "background.error.subtitle.plugin.not-active.help": "Por favor, espere hasta que un administrador de Pipedrive configure los ajustes de la aplicación.",
   "background.error.subtitle.docspace-connection": "No está conectado a ONLYOFFICE DocSpace.",
@@ -16,103 +16,103 @@
   "background.error.subtitle.no-room-access": "Por favor, intente solicitar acceso",
   "background.error.hint.admin.docspace-connection": "Por favor, acceda a la Configuración de conexión para configurar los ajustes de la aplicación ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Por favor, póngase en contacto con el administrador.",
-  "background.error.hint.webhook.is-not-installed": "",
-  "button.back": "",
-  "button.deals": "",
+  "background.error.hint.webhook.is-not-installed": "La sincronización entre los seguidores del trato y los miembros de la sala no se está realizando debido a un fallo en el webhook.",
+  "button.back": "Volver",
+  "button.deals": "Ir a tratos",
   "button.reauthorize": "Volver a autorizar",
-  "button.settings": "",
+  "button.settings": "Ir a configuración",
   "button.create.room": "Crear sala",
-  "button.login": "",
+  "button.login": "Iniciar sesión",
   "button.logout": "Cerrar sesión",
   "button.disconnect": "Desconectar",
   "button.connect": "Conectar",
   "button.change": "Cambiar",
   "button.cancel": "Cancelar",
-  "button.create-api-key": "",
-  "button.forgot-password": "",
-  "button.finish": "",
-  "button.next": "",
-  "button.open-in-docspace": "",
+  "button.create-api-key": "Crear una clave",
+  "button.forgot-password": "¿Olvidaste tu contraseña?",
+  "button.finish": "Finalizar",
+  "button.next": "Siguiente",
+  "button.open-in-docspace": "Abrir en DocSpace",
   "button.save": "Guardar",
-  "button.skip": "",
+  "button.skip": "Omitir",
   "button.request-access": "Solicitar acceso",
-  "button.reinstall": "",
+  "button.reinstall": "Reinstalar aplicación",
   "docspace.error.unreached": "ONLYOFFICE DocSpace no está disponible.",
   "docspace.error.login": "Error de autenticación de usuario",
   "docspace.error.loading": "Error al cargar ONLYOFFICE DocSpace",
   "docspace.error.payment": "No es posible crear esta sala ya que se ha alcanzado el límite para el número de salas incluidas en su plan actual.",
   "docspace.link.payments": "Actualizar el plan",
-  "docspace.room.type.form-filling-room": "",
+  "docspace.room.type.form-filling-room": "Sala de rellenado de formularios",
   "docspace.room.type.collaboration": "Sala de colaboración",
   "docspace.room.type.public": "Sala pública",
-  "docspace.room.type.vdr": "",
+  "docspace.room.type.vdr": "Sala de datos virutal (SDV)",
   "docspace.room.type.custom": "Sala personalizada",
-  "docspace.room.type.form-filling-room.short-description": "",
-  "docspace.room.type.collaboration.short-description": "",
-  "docspace.room.type.public.short-description": "",
-  "docspace.room.type.vdr.short-description": "",
-  "docspace.room.type.custom.short-description": "",
-  "docspace.room.type.form-filling-room.description": "",
-  "docspace.room.type.collaboration.description": "",
-  "docspace.room.type.public.description": "",
-  "docspace.room.type.vdr.description": "",
-  "docspace.room.type.custom.description": "",
+  "docspace.room.type.form-filling-room.short-description": "Para recopilar datos en formularios PDF",
+  "docspace.room.type.collaboration.short-description": "Para coeditar documentos con tu equipo",
+  "docspace.room.type.public.short-description": "Para compartir archivos con usuarios externos y clientes",
+  "docspace.room.type.vdr.short-description": "Para proporcionar proteccićon avanzada de archivos",
+  "docspace.room.type.custom.short-description": "Trabajar de acuerdo con tus objetivos",
+  "docspace.room.type.form-filling-room.description": "Recopilar datos mediante el llenado de formularios PDF",
+  "docspace.room.type.collaboration.description": "Colaborar en documentos, hojas de cálculo y presentaciones en tiempo real",
+  "docspace.room.type.public.description": "Compartir documentos con usuarios externos sin requerir registro",
+  "docspace.room.type.vdr.description": "Almacenar y intercambiar de manera segura información confidencial, como durante la debida diligencia",
+  "docspace.room.type.custom.description": "Hacer uso de una configuración flexible de accesos y roles para diversos casos de uso",
   "error.common": "Algo ha salido mal. Por favor, vuelva a cargar la aplicación.",
-  "error.empty-field": "",
-  "error.incorrect-docspace-address": "",
-  "label.warning": "",
-  "link.learn-more-room-types": "",
+  "error.empty-field": "Por favor, complete este campo",
+  "error.incorrect-docspace-address": "Dirección de DocSpace incorrecta, por favor inténtalo de nuevo",
+  "label.warning": "Advertencia",
+  "link.learn-more-room-types": "Aprende más sobre los tipos de habitaciones.",
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
-  "room.create.description": "",
-  "room.login.description": "",
+  "room.create.description": "Crear una sala ONLYOFFICE DocSpace para trabajar con los documentos relacionados con este acuerdo.",
+  "room.login.description": "Inicia sesión en ONLYOFFICE DocSpace para colaborar fácilmente en los documentos de este acuerdo.",
   "room.request-access.ok": "Se le ha concedido correctamente el acceso a la sala de ONLYOFFICE DocSpace",
   "room.request-access.error": "Error al acceder a la sala de ONLYOFFICE DocSpace",
-  "room.request-access.forbidden": "",
+  "room.request-access.forbidden": "Error al obtener acceso a la sala ONLYOFFICE DocSpace, porque el usuario actual no es seguidor del acuerdo.",
   "settings.authorization.deleting.ok": "La autorización de ONLYOFFICE DocSpace se ha eliminado correctamente",
   "settings.authorization.saving.ok": "La autorización de ONLYOFFICE DocSpace se ha guardado correctamente",
-  "settings.authorization.deleting.confirm-message": "",
-  "settings.authorization.unsuccessful": "",
+  "settings.authorization.deleting.confirm-message": "¿Estás seguro de que quieres cerrar sesión?",
+  "settings.authorization.unsuccessful": "Credenciales de autorización inválidas. Por favor, verifica tu correo electrónico y contraseña e intenta iniciar sesión nuevamente.",
   "settings.authorization.saving.error": "No se ha podido guardar la autorización de ONLYOFFICE DocSpace",
-  "settings.authorization.title": "",
-  "settings.authorization.subtitle.address": "",
+  "settings.authorization.title": "Inicia sesión en tu ONLYOFFICE DocSpace conectado para comenzar a usarlo dentro de Pipedrive",
+  "settings.authorization.subtitle.address": "La dirección de tu DocSpace conectada es",
   "settings.authorization.status.authorized": "Ha iniciado sesión con éxito en su cuenta de ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "Correo electrónico",
   "settings.authorization.inputs.password": "Contraseña",
   "settings.authorization.menu-item": "Autorización",
-  "settings.authorization.welcome.title": "",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.open-guide": "",
+  "settings.authorization.welcome.title": "¡Bienvenido a DocSpace!",
+  "settings.authorization.welcome.option1": "Crear una sala en el acuerdo",
+  "settings.authorization.welcome.option2": "Subir un documento a la sala",
+  "settings.authorization.welcome.open-guide": "Abrir guía",
   "settings.connection.saving.error.undefined": "No se ha podido guardar los ajustes de ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.common-invalid-api-key": "",
-  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
+  "settings.connection.saving.error.common-invalid-api-key": "Clave de la API de DocSpace inválida, por favor inténtalo de nuevo.",
+  "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "No se puede acceder a ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Clave API inválida. Por favor, verifica tu clave API e intenta conectarte nuevamente.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Clave de la API inválida. Por favor, asegúrate de que el autor de la clave de la API sea un administrador de DocSpace e intenta conectarte nuevamente.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "Clave API inválida. Por favor, verifica los Access Scopes de la clave de la API en DocSpace e intenta conectarte nuevamente.",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace connection settings have been successfully saved. You can now proceed to Authorization.",
-  "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "",
+  "settings.connection.status.connected": "Tu DocSpace se ha conectado correctamente",
+  "settings.connection.disconnection.description": "Si presionas el botón Desconectar, no tendrás acceso a ONLYOFFICE DocSpace. Esto eliminará las conexiones entre Salas y Acuerdos, y desconectará a todos los usuarios.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace se ha desconectado correctamente",
   "settings.connection.disconnection.error": "No se ha podido desconectar ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurar la configuración de conexión de la aplicación ONLYOFFICE DocSpace",
-  "settings.connection.subtitle.connect": "",
-  "settings.connection.subtitle.change": "",
+  "settings.connection.subtitle.connect": "Conecta tu ONLYOFFICE DocSpace a Pipedrive",
+  "settings.connection.subtitle.change": "Cambiar la dirección o desconectar tu ONLYOFFICE DocSpace de Pipedrive",
   "settings.connection.inputs.url.title": "Dirección de ONLYOFFICE DocSpace",
-  "settings.connection.inputs.url.description": "",
-  "settings.connection.inputs.api-key.title": "",
-  "settings.connection.inputs.api-key.tooltip": "",
+  "settings.connection.inputs.url.description": "Introduce la URL de tu DocSpace en el campo de arriba. Por ejemplo, https://yourcompany.onlyoffice.com",
+  "settings.connection.inputs.api-key.title": "Clave de la API de ONLYOFFICE DocSpace",
+  "settings.connection.inputs.api-key.tooltip": "Antes de conectar la aplicación, por favor ve a tu DocSpace, crea una nueva clave de la API y colócala aquí. Puedes elegir Permisos (Todos) o establecer un acceso restringido con estos ámbitos necesarios para el correcto funcionamiento de la aplicación: Perfil (Lectura), Contactos (Escritura) y Salas (Escritura).",
   "settings.connection.menu-item": "Conexión",
-  "user-guide.page.1.title": "",
-  "user-guide.page.1.step.1": "",
-  "user-guide.page.1.step.2": "",
-  "user-guide.page.1.step.3": "",
-  "user-guide.page.2.title": "",
-  "user-guide.page.2.step.1": "",
-  "user-guide.page.2.step.2": "",
-  "user-guide.page.3.title": "",
-  "user-guide.page.3.step.1": "",
-  "user-guide.page.3.step.2": "",
-  "user-guide.page.3.step.3": "",
-  "user-guide.page.3.step.4": ""
+  "user-guide.page.1.title": "Crear salas",
+  "user-guide.page.1.step.1": "Comienza creando una sala de DocSpace directamente desde una tarjeta de acuerdo en Pipedrive.",
+  "user-guide.page.1.step.2": "Cada sala se nombra automáticamente según el acuerdo, por ejemplo: Acuerdo - [nombre del acuerdo]",
+  "user-guide.page.1.step.3": "Esto mantiene tus documentos organizados y directamente vinculados al acuerdo.",
+  "user-guide.page.2.title": "Sincronizar permisos de acceso",
+  "user-guide.page.2.step.1": "Configura permisos para cada participante de la sala. Puedes otorgar o restringir el acceso a miembros del equipo, clientes o colaboradores externos.",
+  "user-guide.page.2.step.2": "Esto garantiza un intercambio seguro de documentos y colaboración basada en roles.",
+  "user-guide.page.3.title": "Crear o subir documentos",
+  "user-guide.page.3.step.1": "Una vez configurada la sala, puedes:",
+  "user-guide.page.3.step.2": "Subir archivos existentes: DOCX, XLSX, PPTX, PDF, etc.",
+  "user-guide.page.3.step.3": "Crear nuevos archivos directamente en la sala: documentos de texto, hojas de cálculo o presentaciones.",
+  "user-guide.page.3.step.4": "Todo se guarda y se conecta al acuerdo correspondiente."
 }
