--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -17,24 +17,24 @@
   "background.error.hint.admin.docspace-connection": "Veuillez consulter les paramètres de connexion pour configurer les paramètres de l'application ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Veuillez contacter l'administrateur.",
   "background.error.hint.webhook.is-not-installed": "La synchronisation entre les suiveurs de Deal et les membres de salle ne s'effectue pas en raison d'un dysfonctionnement du webhook.",
-  "button.back": "",
-  "button.deals": "",
+  "button.back": "Retour",
+  "button.deals": "Aller aux Affaires",
   "button.reauthorize": "Re-autoriser",
   "button.settings": "Accéder aux paramètres",
   "button.create.room": "Créer une salle",
-  "button.login": "",
+  "button.login": "Se connecter",
   "button.logout": "Déconnexion",
   "button.disconnect": "Déconnecter",
   "button.connect": "Connecter",
   "button.change": "Modifier",
   "button.cancel": "Annuler",
-  "button.create-api-key": "",
-  "button.forgot-password": "",
-  "button.finish": "",
-  "button.next": "",
-  "button.open-in-docspace": "",
+  "button.create-api-key": "Créer une clé",
+  "button.forgot-password": "Mot de passe oublié ?",
+  "button.finish": "Terminer",
+  "button.next": "Suivant",
+  "button.open-in-docspace": "Ouvrir dans DocSpace",
   "button.save": "Enregistrer",
-  "button.skip": "",
+  "button.skip": "Sauter",
   "button.request-access": "Demander l'accès",
   "button.reinstall": "Réinstaller l'application",
   "docspace.error.unreached": "ONLYOFFICE DocSpace n'est pas accessible.",
@@ -42,77 +42,77 @@
   "docspace.error.loading": "Erreur de chargement d'ONLYOFFICE DocSpace",
   "docspace.error.payment": "La création de cette salle n'est pas possible puisque la limite est atteinte pour le nombre de salles incluses dans votre plan actuel.",
   "docspace.link.payments": "Mettre à jour le plan",
-  "docspace.room.type.form-filling-room": "",
+  "docspace.room.type.form-filling-room": "Salle de remplissage des formulaires",
   "docspace.room.type.collaboration": "Salle de collaboration",
   "docspace.room.type.public": "Salle publique",
-  "docspace.room.type.vdr": "",
+  "docspace.room.type.vdr": "Salle de données virtuelle (VRD)",
   "docspace.room.type.custom": "Salle personnalisée",
-  "docspace.room.type.form-filling-room.short-description": "",
-  "docspace.room.type.collaboration.short-description": "",
-  "docspace.room.type.public.short-description": "",
-  "docspace.room.type.vdr.short-description": "",
-  "docspace.room.type.custom.short-description": "",
-  "docspace.room.type.form-filling-room.description": "",
-  "docspace.room.type.collaboration.description": "",
-  "docspace.room.type.public.description": "",
-  "docspace.room.type.vdr.description": "",
-  "docspace.room.type.custom.description": "",
+  "docspace.room.type.form-filling-room.short-description": "Pour collecter des données dans des formulaires PDF",
+  "docspace.room.type.collaboration.short-description": "Pour coéditer des documents avec votre équipe",
+  "docspace.room.type.public.short-description": "Pour partager des fichiers avec des utilisateurs externes et des clients",
+  "docspace.room.type.vdr.short-description": "Pour assurer une protection avancée des fichiers",
+  "docspace.room.type.custom.short-description": "Pour travailler en fonction de vos objectifs",
+  "docspace.room.type.form-filling-room.description": "Pour collecter des données en remplissant des formulaires PDF.",
+  "docspace.room.type.collaboration.description": "Pour collaborer en temps réel sur des documents, des feuilles de calcul et des présentations.",
+  "docspace.room.type.public.description": "Pour partager des documents avec des utilisateurs externes sans inscription.",
+  "docspace.room.type.vdr.description": "Pour stocker et échanger en toute sécurité des informations confidentielles, par exemple dans le cadre d'une procédure de diligence raisonnable.",
+  "docspace.room.type.custom.description": "Pour utiliser la flexibilité de l'accès et la configuration des rôles pour différents cas d'utilisation.",
   "error.common": "Un problème s'est produit. Veuillez recharger l'application.",
-  "error.empty-field": "",
-  "error.incorrect-docspace-address": "",
-  "label.warning": "",
-  "link.learn-more-room-types": "",
+  "error.empty-field": "Veuillez remplir ce champ",
+  "error.incorrect-docspace-address": "Adresse DocSpace incorrecte, veuillez réessayer",
+  "label.warning": "Avertissement",
+  "link.learn-more-room-types": "En savoir plus sur les types de salles.",
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
-  "room.create.description": "",
-  "room.login.description": "",
+  "room.create.description": "Créer une salle ONLYOFFICE DocSpace pour travailler avec les documents liés à cette affaire.",
+  "room.login.description": "Connectez-vous à ONLYOFFICE DocSpace pour collaborer facilement sur les documents de cette affaire",
   "room.request-access.ok": "L'accès à la salle d'ONLYOFFICE DocSpace vous a été accordé avec succès",
   "room.request-access.error": "Erreur d'accès à la salle d'ONLYOFFICE DocSpace",
-  "room.request-access.forbidden": "",
+  "room.request-access.forbidden": "Erreur d'accès à la salle ONLYOFFICE DocSpace, car l'utilisateur actuel n'est pas un suiveur d'affaires.",
   "settings.authorization.deleting.ok": "L'autorisation d'ONLYOFFICE DocSpace a été supprimée avec succès",
-  "settings.authorization.deleting.confirm-message": "",
+  "settings.authorization.deleting.confirm-message": "Souhaitez-vous vraiment vous déconnecter ?",
   "settings.authorization.saving.ok": "L'autorisation d'ONLYOFFICE DocSpace a été sauvegardée avec succès",
-  "settings.authorization.unsuccessful": "",
+  "settings.authorization.unsuccessful": "Les données d'autorisation ne sont pas valides. Veuillez vérifier votre adresse e-mail et votre mot de passe et réessayer de vous connecter.",
   "settings.authorization.saving.error": "Impossible de sauvegarder l'autorisation d'ONLYOFFICE DocSpace",
-  "settings.authorization.title": "",
+  "settings.authorization.title": "Connectez-vous à votre ONLYOFFICE DocSpace intégré pour commencer à l'utiliser dans Pipedrive.",
   "settings.authorization.subtitle.address": "Votre adresse DocSpace connectée est",
   "settings.authorization.status.authorized": "Vous vous êtes connecté avec succès à votre compte ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "E-mail",
   "settings.authorization.inputs.password": "Mot de passe",
   "settings.authorization.menu-item": "Authorization",
-  "settings.authorization.welcome.title": "",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.open-guide": "",
+  "settings.authorization.welcome.title": "Bienvenue à DocSpace !",
+  "settings.authorization.welcome.option1": "Créez une salle dans l'affaire",
+  "settings.authorization.welcome.option2": "Téléchargez un document dans la salle",
+  "settings.authorization.welcome.open-guide": "Ouvrir le guide",
   "settings.connection.saving.error.undefined": "Impossible d'enregistrer les paramètres d'ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.common-invalid-api-key": "",
+  "settings.connection.saving.error.common-invalid-api-key": "Clé d'API DocSpace incorrecte, veuillez réessayer",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace n'est pas joignable",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
-  "settings.connection.saving.ok": "",
-  "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Clé API non valide. Veuillez vérifier votre clé API et réessayer de vous connecter.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Clé API non valide. Veuillez vous assurer que l'auteur de la clé API est l'administrateur de DocSpace et essayez de vous connecter à nouveau.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "Clé API non valide. Veuillez vérifier les champs d'accès de la clé API dans DocSpace et essayez de vous connecter à nouveau.",
+  "settings.connection.saving.ok": "Les paramètres de connexion à ONLYOFFICE DocSpace ont été sauvegardés avec succès. Vous pouvez maintenant passer à l'autorisation.",
+  "settings.connection.status.connected": "Votre DocSpace a été connecté avec succès",
+  "settings.connection.disconnection.description": "Si vous appuyez sur le bouton Déconnecter, vous n'aurez plus accès à ONLYOFFICE DocSpace. Les connexions entre les salles et les affaires seront supprimées et tous les utilisateurs seront déconnectés.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace a été déconnecté avec succès",
   "settings.connection.disconnection.error": "Impossible de déconnecter ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurez les paramètres de connexion de l'application ONLYOFFICE DocSpace",
   "settings.connection.subtitle.connect": "Connectez votre ONLYOFFICE DocSpace à Pipedrive",
   "settings.connection.subtitle.change": "Changez d'adresse ou déconnectez votre ONLYOFFICE DocSpace de Pipedrive",
   "settings.connection.inputs.url.title": "Adresse d'ONLYOFFICE DocSpace",
-  "settings.connection.inputs.url.description": "",
+  "settings.connection.inputs.url.description": "Saisissez l'URL de votre DocSpace dans le champ ci-dessus. Par exemple, https://yourcompany.onlyoffice.com",
   "settings.connection.inputs.api-key.title": "Clé de l'API de ONLYOFFICE DocSpace",
-  "settings.connection.inputs.api-key.tooltip": "",
+  "settings.connection.inputs.api-key.tooltip": "Avant de connecter l'application, veuillez vous rendre dans votre DocSpace, créer une nouvelle clé API et la saisir ici. Vous pouvez choisir Permissions (Toutes) ou définir un accès restreint avec les champs d'application requis pour le bon fonctionnement de l'application : Profil (Lire), Contacts (Écrire), et Salles (Écrire).",
   "settings.connection.menu-item": "Connexion",
-  "user-guide.page.1.title": "",
-  "user-guide.page.1.step.1": "",
-  "user-guide.page.1.step.2": "",
-  "user-guide.page.1.step.3": "",
-  "user-guide.page.2.title": "",
-  "user-guide.page.2.step.1": "",
-  "user-guide.page.2.step.2": "",
-  "user-guide.page.3.title": "",
-  "user-guide.page.3.step.1": "",
-  "user-guide.page.3.step.2": "",
-  "user-guide.page.3.step.3": "",
-  "user-guide.page.3.step.4": ""
+  "user-guide.page.1.title": "Créez des salles",
+  "user-guide.page.1.step.1": "Commencez par créer une salle DocSpace directement à partir d'une carte d'affaire dans Pipedrive.",
+  "user-guide.page.1.step.2": "Chaque salle est automatiquement nommée d'après l'affaire, par exemple : Affaire - [nom de l'affaire]",
+  "user-guide.page.1.step.3": "Vos documents sont ainsi organisés et directement liés à l'affaire",
+  "user-guide.page.2.title": "Synchronisez les autorisations d'accès",
+  "user-guide.page.2.step.1": "Définissez les autorisations pour chaque participant à la salle. Vous pouvez accorder ou restreindre l'accès aux membres de l'équipe, aux clients ou aux collaborateurs externes.",
+  "user-guide.page.2.step.2": "Cela garantit un partage sécurisé des documents et une collaboration basée sur les rôles.",
+  "user-guide.page.3.title": "Créez ou téléchargez des documents",
+  "user-guide.page.3.step.1": "Une fois la salle configurée, vous pouvez :",
+  "user-guide.page.3.step.2": "Téléchargez des fichiers existants : DOCX, XLSX, PPTX, PDF, etc.",
+  "user-guide.page.3.step.3": "Créez de nouveaux fichiers directement dans la salle : documents texte, feuilles de calcul ou présentations.",
+  "user-guide.page.3.step.4": "Tout est sauvegardé et relié à l'affaire correspondante."
 }
