--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -17,24 +17,24 @@
   "background.error.hint.admin.docspace-connection": "ONLYOFFICE DocSpace アプリの設定を行うには、接続設定に移動してください。",
   "background.error.hint.docspace-connection": "管理者にお問い合わせください。",
   "background.error.hint.webhook.is-not-installed": "Webhookの誤動作により、取引フォロワーとルームメンバー間の同期が行われていません。",
-  "button.back": "",
-  "button.deals": "",
+  "button.back": "戻る",
+  "button.deals": "案件に移動",
   "button.reauthorize": "再認証",
   "button.settings": "設定に移動",
   "button.create.room": "ルームの作成",
-  "button.login": "",
+  "button.login": "ログイン",
   "button.logout": "ログアウト",
   "button.disconnect": "切断",
   "button.connect": "接続",
   "button.change": "変更",
   "button.cancel": "キャンセル",
-  "button.create-api-key": "",
-  "button.forgot-password": "",
-  "button.finish": "",
-  "button.next": "",
-  "button.open-in-docspace": "",
+  "button.create-api-key": "キーを生成",
+  "button.forgot-password": "パスワードをお忘れですか？",
+  "button.finish": "完了",
+  "button.next": "次へ",
+  "button.open-in-docspace": "DocSpaceで開く",
   "button.save": "保存",
-  "button.skip": "",
+  "button.skip": "スキップ",
   "button.request-access": "アクセスをリクエストする",
   "button.reinstall": "アプリを再インストール",
   "docspace.error.unreached": "ONLYOFFICE DocSpaceに接続できません",
@@ -42,77 +42,77 @@
   "docspace.error.loading": "ONLYOFFICE DocSpace の読み込みエラー",
   "docspace.error.payment": "現在ご契約中のプランのルーム数が上限に達しているため、このルームの作成はできません。",
   "docspace.link.payments": "プランのアップグレード",
-  "docspace.room.type.form-filling-room": "",
+  "docspace.room.type.form-filling-room": "フォーム記入ルーム",
   "docspace.room.type.collaboration": "コラボレーションルーム",
   "docspace.room.type.public": "パブリックルーム",
-  "docspace.room.type.vdr": "",
+  "docspace.room.type.vdr": "仮装データルーム（VRD）",
   "docspace.room.type.custom": "カスタムルーム",
-  "docspace.room.type.form-filling-room.short-description": "",
-  "docspace.room.type.collaboration.short-description": "",
-  "docspace.room.type.public.short-description": "",
-  "docspace.room.type.vdr.short-description": "",
-  "docspace.room.type.custom.short-description": "",
-  "docspace.room.type.form-filling-room.description": "",
-  "docspace.room.type.collaboration.description": "",
-  "docspace.room.type.public.description": "",
-  "docspace.room.type.vdr.description": "",
-  "docspace.room.type.custom.description": "",
+  "docspace.room.type.form-filling-room.short-description": "PDFフォームでデータを収集するために",
+  "docspace.room.type.collaboration.short-description": "チームと文書を共同編集するために",
+  "docspace.room.type.public.short-description": "外部ユーザーやクライアントとファイルを共有するため",
+  "docspace.room.type.vdr.short-description": "高度なファイル保護を提供するために",
+  "docspace.room.type.custom.short-description": "目標に従って作業するために",
+  "docspace.room.type.form-filling-room.description": "PDFフォームに記入することでデータを収集するために",
+  "docspace.room.type.collaboration.description": "リアルタイムで文書、スプレッドシート、プレゼンテーションに共同作業するために",
+  "docspace.room.type.public.description": "外部ユーザーと文書を共有する際に、登録を必要としないために",
+  "docspace.room.type.vdr.description": "デューデリジェンス中など、機密情報を安全に保存し、交換するために",
+  "docspace.room.type.custom.description": "さまざまなユースケースに対して、柔軟なアクセスと役割の構成を利用するために",
   "error.common": "何か問題が発生しました。アプリを再読み込みしてください。",
-  "error.empty-field": "",
-  "error.incorrect-docspace-address": "",
-  "label.warning": "",
-  "link.learn-more-room-types": "",
+  "error.empty-field": "このフィールドに入力してください",
+  "error.incorrect-docspace-address": "不正なDocSpaceアドレスです。もう一度お試しください。",
+  "label.warning": "警告",
+  "link.learn-more-room-types": "ルームの種類についてもっと学びましょう。",
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
-  "room.create.description": "",
-  "room.login.description": "",
+  "room.create.description": "この案件に関連する文書で作業するために、ONLYOFFICE DocSpaceルームを作成します。",
+  "room.login.description": "この案件で文書を簡単に共同作業するために、ONLYOFFICE DocSpaceにログインしてください",
   "room.request-access.ok": "ONLYOFFICE DocSpaceルームへのアクセスが許可されました。",
   "room.request-access.error": "ONLYOFFICE DocSpaceルームへのアクセスエラー",
-  "room.request-access.forbidden": "",
+  "room.request-access.forbidden": "ONLYOFFICE DocSpaceルームへのアクセスを取得する際にエラーが発生しました。現在のユーザーはこの案件のフォロワーではありません。",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace認証が正常に削除されました",
-  "settings.authorization.deleting.confirm-message": "",
+  "settings.authorization.deleting.confirm-message": "ログアウトしてもよろしいですか？",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace認証が正常に保存されました",
-  "settings.authorization.unsuccessful": "",
+  "settings.authorization.unsuccessful": "無効な認証情報です。メールアドレスとパスワードを確認し、再度ログインを試みてください。",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace認証を保存できませんでした",
-  "settings.authorization.title": "",
+  "settings.authorization.title": "接続されたONLYOFFICE DocSpaceにログインして、Pipedrive内で使用を開始してください",
   "settings.authorization.subtitle.address": "接続されたDocSpaceアドレス：",
   "settings.authorization.status.authorized": "ONLYOFFICE DocSpaceアカウントに正常にログインしました",
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "パスワード",
   "settings.authorization.menu-item": "認証",
-  "settings.authorization.welcome.title": "",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.open-guide": "",
+  "settings.authorization.welcome.title": "DocSpaceへようこそ！",
+  "settings.authorization.welcome.option1": "案件にルームを作成する",
+  "settings.authorization.welcome.option2": "ルームにドキュメントをアップロード",
+  "settings.authorization.welcome.open-guide": "ガイドを開く",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace設定を保存できませんでした",
-  "settings.connection.saving.error.common-invalid-api-key": "",
+  "settings.connection.saving.error.common-invalid-api-key": "無効なDocSpace APIキーです。もう一度お試しください。",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpaceに接続できません",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
-  "settings.connection.saving.ok": "",
-  "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "無効なAPIキーです。APIキーを確認して、再度接続をお試しください。",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "無効なAPIキーです。APIキーの作成者がDocSpace管理者であることを確認し、再度接続を試みてください。",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "無効なAPIキーです。DocSpaceでAPIキーのアクセススコープを確認し、再度接続をお試しください。",
+  "settings.connection.saving.ok": "ONLYOFFICE DocSpaceの接続設定が正常に保存されました。これで認証に進むことができます。",
+  "settings.connection.status.connected": "DocSpaceは正常に接続されました",
+  "settings.connection.disconnection.description": "切断ボタンを押すと、ONLYOFFICE DocSpaceにアクセスできなくなります。これにより、ルームと取引の間の接続が削除され、すべてのユーザーが切断されます。",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpaceの切断に成功しました",
   "settings.connection.disconnection.error": "ONLYOFFICE DocSpaceの切断に失敗しました",
   "settings.connection.title": "ONLYOFFICE DocSpaceアプリの接続設定を確認してください",
   "settings.connection.subtitle.connect": "ONLYOFFICE DocSpaceをPipedriveに接続してください",
   "settings.connection.subtitle.change": "アドレスを変更するか、ONLYOFFICE DocSpaceをPipedriveから切断してください",
   "settings.connection.inputs.url.title": "ONLYOFFICE DocSpaceアドレス",
-  "settings.connection.inputs.url.description": "",
+  "settings.connection.inputs.url.description": "上のフィールドにあなたのDocSpaceのURLを入力してください。例えば：https://yourcompany.onlyoffice.com",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpaceのAPIキー",
-  "settings.connection.inputs.api-key.tooltip": "",
+  "settings.connection.inputs.api-key.tooltip": "アプリを接続する前に、DocSpaceに移動し、新しいAPIキーを作成してここに入力してください。アクセス権（すべて）を選択するか、適切なアプリ機能のためにこれらの必要なスコープで制限されたアクセスを設定できます：プロフィール（読み取り）、連絡先（書き込み）、およびルーム（書き込み）。",
   "settings.connection.menu-item": "接続",
-  "user-guide.page.1.title": "",
-  "user-guide.page.1.step.1": "",
-  "user-guide.page.1.step.2": "",
-  "user-guide.page.1.step.3": "",
-  "user-guide.page.2.title": "",
-  "user-guide.page.2.step.1": "",
-  "user-guide.page.2.step.2": "",
-  "user-guide.page.3.title": "",
-  "user-guide.page.3.step.1": "",
-  "user-guide.page.3.step.2": "",
-  "user-guide.page.3.step.3": "",
-  "user-guide.page.3.step.4": ""
+  "user-guide.page.1.title": "ルームを作成",
+  "user-guide.page.1.step.1": "まず、Pipedriveの案件カードから直接DocSpaceルームを作成します。",
+  "user-guide.page.1.step.2": "各ルームは自動的に案件名にちなんで名付けられます。例えば：案件 - [案件名]",
+  "user-guide.page.1.step.3": "これにより、あなたの文書は整理され、案件に直接結びつけられます。",
+  "user-guide.page.2.title": "アクセス権限を同期する",
+  "user-guide.page.2.step.1": "各ルームの参加者に対して権限を設定します。チームメンバー、クライアント、または外部の共同作業者に対してアクセスを許可または制限することができます。",
+  "user-guide.page.2.step.2": "これにより、安全な文書共有と役割に基づくコラボレーションが保証されます。",
+  "user-guide.page.3.title": "文書を作成またはアップロードする",
+  "user-guide.page.3.step.1": "ルームが整ったら、次のことができます：",
+  "user-guide.page.3.step.2": "既存のファイルをアップロード: DOCX、XLSX、PPTX、PDFなど。",
+  "user-guide.page.3.step.3": "ルーム内で直接新しいファイルを作成します：テキスト文書、スプレッドシート、またはプレゼンテーション。",
+  "user-guide.page.3.step.4": "すべてが保存され、関連する案件に接続されます。"
 }
