--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -17,102 +17,102 @@
   "background.error.hint.admin.docspace-connection": "Por favor, vá para a Configuração de conexão para configurar as configurações do aplicativo ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Entre em contato com o administrador.",
   "background.error.hint.webhook.is-not-installed": "A sincronização entre os seguidores do Deal e os membros da Sala não está ocorrendo devido a um mau funcionamento do webhook.",
-  "button.back": "",
-  "button.deals": "",
+  "button.back": "Voltar",
+  "button.deals": "Ir para Ofertas",
   "button.reauthorize": "Reautorizar",
   "button.settings": "Acesse Configurações",
   "button.create.room": "Criar sala",
-  "button.login": "",
+  "button.login": "Fazer login",
   "button.logout": "Sair",
   "button.disconnect": "Desconectar",
   "button.connect": "Conectar",
   "button.change": "Alterar",
   "button.cancel": "Cancelar",
-  "button.create-api-key": "",
-  "button.forgot-password": "",
+  "button.create-api-key": "Criar uma chave",
+  "button.forgot-password": "Esqueceu a senha?",
   "button.save": "Salvar",
-  "button.finish": "",
-  "button.open-in-docspace": "",
-  "button.next": "",
+  "button.finish": "Concluir",
+  "button.open-in-docspace": "Abrir no DocSpace",
+  "button.next": "Próximo",
   "button.request-access": "Solicitar acesso",
-  "button.skip": "",
+  "button.skip": "Ignorar",
   "button.reinstall": "Reinstale o aplicativo",
   "docspace.error.unreached": "ONLYOFFICE DocSpace não pode ser acessado.",
   "docspace.error.login": "Falha na autenticação do usuário",
   "docspace.error.loading": "Erro ao carregar o ONLYOFFICE DocSpace",
   "docspace.error.payment": "Não é possível criar esta sala, pois o limite foi atingido para o número de salas incluídas no seu plano atual.",
   "docspace.link.payments": "Plano de upgrade",
-  "docspace.room.type.form-filling-room": "",
+  "docspace.room.type.form-filling-room": "Sala de preenchimento de formulários",
   "docspace.room.type.collaboration": "Sala de colaboração",
   "docspace.room.type.public": "Sala pública",
-  "docspace.room.type.vdr": "",
+  "docspace.room.type.vdr": "Sala de dados virtual (VRD)",
   "docspace.room.type.custom": "Sala personalizada",
-  "docspace.room.type.form-filling-room.short-description": "",
-  "docspace.room.type.collaboration.short-description": "",
-  "docspace.room.type.public.short-description": "",
-  "docspace.room.type.vdr.short-description": "",
-  "docspace.room.type.custom.short-description": "",
-  "docspace.room.type.form-filling-room.description": "",
-  "docspace.room.type.collaboration.description": "",
-  "docspace.room.type.public.description": "",
-  "docspace.room.type.vdr.description": "",
-  "docspace.room.type.custom.description": "",
+  "docspace.room.type.form-filling-room.short-description": "Para coletar dados em formulários PDF",
+  "docspace.room.type.collaboration.short-description": "Para coeditar documentos com sua equipe",
+  "docspace.room.type.public.short-description": "Para compartilhar arquivos com usuários e clientes externos",
+  "docspace.room.type.vdr.short-description": "Para fornecer proteção avançada de arquivos",
+  "docspace.room.type.custom.short-description": "Para trabalhar de acordo com seus objetivos",
+  "docspace.room.type.form-filling-room.description": "Para coletar dados preenchendo formulários em PDF.",
+  "docspace.room.type.collaboration.description": "Para colaborar em documentos, planilhas e apresentações em tempo real.",
+  "docspace.room.type.public.description": "Para compartilhar documentos com usuários externos sem a necessidade de cadastro.",
+  "docspace.room.type.vdr.description": "Para armazenar e trocar informações confidenciais com segurança, como durante a due diligence.",
+  "docspace.room.type.custom.description": "Para usar acesso flexível e configuração de funções para vários casos de uso.",
   "error.common": "Algo deu errado. Recarregue o aplicativo.",
-  "error.empty-field": "",
-  "error.incorrect-docspace-address": "",
-  "label.warning": "",
-  "link.learn-more-room-types": "",
+  "error.empty-field": "Preencha este campo",
+  "error.incorrect-docspace-address": "Endereço do DocSpace incorreto, tente novamente",
+  "label.warning": "Aviso",
+  "link.learn-more-room-types": "Saiba mais sobre os tipos de sala.",
   "room.creating.ok": "A sala ONLYOFFICE DocSpace foi criada com sucesso!",
   "room.creating.error": "Falha ao criar a sala ONLYOFFICE DocSpace!",
-  "room.create.description": "",
-  "room.login.description": "",
+  "room.create.description": "Crie uma sala do ONLYOFFICE DocSpace para trabalhar com documentos relacionados a este negócio.",
+  "room.login.description": "Efetue login no ONLYOFFICE DocSpace para colaborar facilmente em documentos deste negócio",
   "room.request-access.ok": "Você obteve acesso com sucesso à sala do ONLYOFFICE DocSpace",
   "room.request-access.error": "Erro ao obter acesso à sala do ONLYOFFICE DocSpace",
-  "room.request-access.forbidden": "",
+  "room.request-access.forbidden": "Erro ao obter acesso à sala do ONLYOFFICE DocSpace, porque o usuário atual não é um seguidor do negócio.",
   "settings.authorization.deleting.ok": "A autorização do ONLYOFFICE DocSpace foi excluída com sucesso",
-  "settings.authorization.deleting.confirm-message": "",
+  "settings.authorization.deleting.confirm-message": "Tem certeza? Deseja sair?",
   "settings.authorization.saving.ok": "A autorização do ONLYOFFICE DocSpace foi salva com sucesso",
-  "settings.authorization.unsuccessful": "",
+  "settings.authorization.unsuccessful": "Credenciais de autorização inválidas. Verifique seu e-mail e senha e tente fazer login novamente.",
   "settings.authorization.saving.error": "Não foi possível salvar a autorização do ONLYOFFICE DocSpace",
-  "settings.authorization.title": "",
+  "settings.authorization.title": "Faça login no seu DocSpace do ONLYOFFICE conectado para começar a usá-lo no Pipedrive",
   "settings.authorization.subtitle.address": "Seu endereço do DocSpace conectado é",
   "settings.authorization.status.authorized": "Você fez login com sucesso na sua conta do ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "E-mail",
   "settings.authorization.inputs.password": "Senha",
   "settings.authorization.menu-item": "Autorização",
-  "settings.authorization.welcome.title": "",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.open-guide": "",
+  "settings.authorization.welcome.title": "Bem-vindo ao DocSpace!",
+  "settings.authorization.welcome.option1": "Criar uma sala na oportunidade",
+  "settings.authorization.welcome.option2": "Carregar um documento para a sala",
+  "settings.authorization.welcome.open-guide": "Abrir Guia",
   "settings.connection.saving.error.undefined": "Não foi possível salvar as configurações do ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.common-invalid-api-key": "",
+  "settings.connection.saving.error.common-invalid-api-key": "Chave de API do DocSpace inválida, tente novamente",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace não pode ser contatado",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
-  "settings.connection.saving.ok": "",
-  "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Chave de API inválida. Verifique sua chave de API e tente se conectar novamente.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Chave de API inválida. Certifique-se de que o autor da chave de API seja o administrador do DocSpace e tente se conectar novamente.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "Chave de API inválida. Verifique os Escopos de Acesso para a chave de API no DocSpace e tente se conectar novamente.",
+  "settings.connection.saving.ok": "As configurações de conexão do ONLYOFFICE DocSpace foram salvas com sucesso. Agora você pode prosseguir para a Autorização.",
+  "settings.connection.status.connected": "Seu DocSpace foi conectado com sucesso.",
+  "settings.connection.disconnection.description": "Se você pressionar o botão Desconectar, não terá acesso ao DocSpace do ONLYOFFICE. Isso removerá as conexões entre Salas e Ofertas e desconectará todos os usuários.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace desconectado com sucesso",
   "settings.connection.disconnection.error": "Não foi possível desconectar o ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurar as configurações de conexão do aplicativo ONLYOFFICE DocSpace",
   "settings.connection.subtitle.connect": "Conecte seu ONLYOFFICE DocSpace ao Pipedrive.",
   "settings.connection.subtitle.change": "Altere o endereço ou desconecte seu ONLYOFFICE DocSpace do Pipedrive.",
   "settings.connection.inputs.url.title": "Endereço do ONLYOFFICE DocSpace",
-  "settings.connection.inputs.url.description": "",
+  "settings.connection.inputs.url.description": "Digite a URL do seu DocSpace no campo acima. Por exemplo, https://suaempresa.onlyoffice.com",
   "settings.connection.inputs.api-key.title": "Chave de API do ONLYOFFICE DocSpace.",
-  "settings.connection.inputs.api-key.tooltip": "",
+  "settings.connection.inputs.api-key.tooltip": "Antes de conectar o aplicativo, acesse seu DocSpace, crie uma nova chave de API e insira-a aqui. Você pode escolher Permissões (Todas) ou definir acesso restrito com estes escopos necessários para o funcionamento adequado do aplicativo: Perfil (Leitura), Contatos (Escrita) e Salas (Escrita).",
   "settings.connection.menu-item": "Conexão",
-  "user-guide.page.1.title": "",
-  "user-guide.page.1.step.1": "",
-  "user-guide.page.1.step.2": "",
-  "user-guide.page.1.step.3": "",
-  "user-guide.page.2.title": "",
-  "user-guide.page.2.step.1": "",
-  "user-guide.page.2.step.2": "",
-  "user-guide.page.3.title": "",
-  "user-guide.page.3.step.1": "",
-  "user-guide.page.3.step.2": "",
-  "user-guide.page.3.step.3": "",
-  "user-guide.page.3.step.4": ""
+  "user-guide.page.1.title": "Criar salas",
+  "user-guide.page.1.step.1": "Comece criando uma sala no DocSpace diretamente de um cartão de negócio no Pipedrive.",
+  "user-guide.page.1.step.2": "Cada sala é automaticamente nomeada com o nome do negócio, por exemplo: Negócio - [nome do negócio]",
+  "user-guide.page.1.step.3": "Isso mantém seus documentos organizados e diretamente vinculados ao negócio.",
+  "user-guide.page.2.title": "Sincronizar permissões de acesso",
+  "user-guide.page.2.step.1": "Defina permissões para cada participante da sala. Você pode conceder ou restringir o acesso a membros da equipe, clientes ou colaboradores externos.",
+  "user-guide.page.2.step.2": "Isso garante o compartilhamento seguro de documentos e a colaboração baseada em funções.",
+  "user-guide.page.3.title": "Criar ou enviar documentos.",
+  "user-guide.page.3.step.1": "Após a configuração da sala, você pode:",
+  "user-guide.page.3.step.2": "Enviar arquivos existentes: DOCX, XLSX, PPTX, PDF, etc.",
+  "user-guide.page.3.step.3": "Criar novos arquivos diretamente na sala: documentos de texto, planilhas ou apresentações.",
+  "user-guide.page.3.step.4": "Tudo é salvo e conectado ao negócio relevante."
 }
