--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -17,102 +17,102 @@
   "background.error.hint.admin.docspace-connection": "Пожалуйста, перейдите к Настройкам соединения, чтобы настроить приложение.",
   "background.error.hint.docspace-connection": "Пожалуйста, обратитесь к администратору",
   "background.error.hint.webhook.is-not-installed": "Синхронизация между подписчиками сделки и участниками комнаты не происходит из-за сбоя в работе веб-хука.",
-  "button.back": "",
-  "button.deals": "",
+  "button.back": "Назад",
+  "button.deals": "Перейти к Сделкам",
   "button.reauthorize": "Авторизуйтесь повторно",
   "button.settings": "Перейти в настройки",
   "button.create.room": "Создать комнату",
-  "button.login": "",
+  "button.login": "Войти",
   "button.logout": "Выйти",
   "button.disconnect": "Отключиться",
   "button.connect": "Подключиться",
   "button.change": "Изменить",
   "button.cancel": "Отменить",
-  "button.create-api-key": "",
-  "button.forgot-password": "",
-  "button.finish": "",
-  "button.next": "",
-  "button.open-in-docspace": "",
+  "button.create-api-key": "Создать ключ",
+  "button.forgot-password": "Забыли пароль?",
+  "button.finish": "Закончить",
+  "button.next": "Следующий",
+  "button.open-in-docspace": "Открыть в DocSpace",
   "button.save": "Сохранить",
   "button.request-access": "Запросить доступ",
-  "button.skip": "",
+  "button.skip": "Пропустить",
   "button.reinstall": "Переустановить приложение",
   "docspace.error.unreached": "ONLYOFFICE DocSpace недоступен.",
   "docspace.error.login": "Не удалось идентифицировать пользователя",
   "docspace.error.loading": "Ошибка загрузки ONLYOFFICE DocSpace",
   "docspace.error.payment": "Комната не может быть создана, поскольку достигнут лимит на количество комнат, включенных в ваш текущий тарифный план.",
   "docspace.link.payments": "Обновить тарифный план",
-  "docspace.room.type.form-filling-room": "",
+  "docspace.room.type.form-filling-room": "Комната заполнения форм",
   "docspace.room.type.collaboration": "Комната для совместной работы",
   "docspace.room.type.public": "Публичная комната",
-  "docspace.room.type.vdr": "",
+  "docspace.room.type.vdr": "Виртуальная комната данных (VRD)",
   "docspace.room.type.custom": "Пользовательская комната",
-  "docspace.room.type.form-filling-room.short-description": "",
-  "docspace.room.type.collaboration.short-description": "",
-  "docspace.room.type.public.short-description": "",
-  "docspace.room.type.vdr.short-description": "",
-  "docspace.room.type.custom.short-description": "",
-  "docspace.room.type.form-filling-room.description": "",
-  "docspace.room.type.collaboration.description": "",
-  "docspace.room.type.public.description": "",
-  "docspace.room.type.vdr.description": "",
-  "docspace.room.type.custom.description": "",
+  "docspace.room.type.form-filling-room.short-description": "Для сбора данных в PDF-формах",
+  "docspace.room.type.collaboration.short-description": "Для редактирования документов вместе с вашей командой",
+  "docspace.room.type.public.short-description": "Для обмена файлами с внешними пользователями и клиентами",
+  "docspace.room.type.vdr.short-description": "Для обеспечения расширенной защиты файлов",
+  "docspace.room.type.custom.short-description": "Для работы в соответствии с вашими целями",
+  "docspace.room.type.form-filling-room.description": "Для сбора данных посредством заполнения PDF-форм.",
+  "docspace.room.type.collaboration.description": "Для совместной работы над текстовыми документами, электронными таблицами и презентациями в режиме реального времени.",
+  "docspace.room.type.public.description": "Для обмена документами с внешними пользователями без регистрации.",
+  "docspace.room.type.vdr.description": "Для безопасного хранения и обмена конфиденциальной информацией, например, в ходе комплексной проверки.",
+  "docspace.room.type.custom.description": "Для использования гибких настроек доступа и ролей для различных целей.",
   "error.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение",
-  "error.empty-field": "",
-  "error.incorrect-docspace-address": "",
-  "label.warning": "",
-  "link.learn-more-room-types": "",
+  "error.empty-field": "Пожалуйста, заполните это поле",
+  "error.incorrect-docspace-address": "Неверный адрес DocSpace, попробуйте еще раз",
+  "label.warning": "Предупреждение",
+  "link.learn-more-room-types": "Узнайте больше о типах комнат.",
   "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
   "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
-  "room.create.description": "",
-  "room.login.description": "",
+  "room.create.description": "Создайте комнату в ONLYOFFICE DocSpace для работы с документами, связанными с этой сделкой.",
+  "room.login.description": "Войдите в ONLYOFFICE DocSpace, чтобы с легкостью работать над документами совместно в рамках этой сделки.",
   "room.request-access.ok": "Вам успешно предоставлен доступ к комнате ONLYOFFICE DocSpace",
   "room.request-access.error": "Ошибка при получении доступа к комнате ONLYOFFICE DocSpace",
-  "room.request-access.forbidden": "",
+  "room.request-access.forbidden": "Ошибка при получении доступа к комнате в ONLYOFFICE DocSpace: текущий пользователь не является подписчиком сделки.",
   "settings.authorization.deleting.ok": "Авторизация ONLYOFFICE DocSpace успешно удалена",
-  "settings.authorization.deleting.confirm-message": "",
+  "settings.authorization.deleting.confirm-message": "Вы уверены, что хотите выйти?",
   "settings.authorization.saving.ok": "Авторизация ONLYOFFICE DocSpace успешно сохранена",
-  "settings.authorization.unsuccessful": "",
+  "settings.authorization.unsuccessful": "Неверные учетные данные. Проверьте адрес электронной почты и пароль и попробуйте войти снова.",
   "settings.authorization.saving.error": "Не удалось сохранить авторизацию ONLYOFFICE DocSpace",
-  "settings.authorization.title": "",
+  "settings.authorization.title": "Войдите в подключенный ONLYOFFICE DocSpace, чтобы начать использовать его в Pipedrive",
   "settings.authorization.subtitle.address": "Ваш подключенный адрес DocSpace:",
   "settings.authorization.status.authorized": "Вы успешно вошли в свою учетную запись ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "Электронная почта",
   "settings.authorization.inputs.password": "Пароль",
   "settings.authorization.menu-item": "Авторизация",
-  "settings.authorization.welcome.title": "",
-  "settings.authorization.welcome.option1": "",
-  "settings.authorization.welcome.option2": "",
-  "settings.authorization.welcome.open-guide": "",
+  "settings.authorization.welcome.title": "Добро пожаловать в DocSpace!",
+  "settings.authorization.welcome.option1": "Создать комнату в сделке",
+  "settings.authorization.welcome.option2": "Загрузить документ в комнату",
+  "settings.authorization.welcome.open-guide": "Открыть руководство",
   "settings.connection.saving.error.undefined": "Не удалось сохранить настройки ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.common-invalid-api-key": "",
+  "settings.connection.saving.error.common-invalid-api-key": "Неверный ключ API DocSpace, попробуйте еще раз",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace недоступен",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
-  "settings.connection.saving.ok": "",
-  "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Неверный ключ API. Проверьте ваш ключ API и попробуйте подключиться снова.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Неверный ключ API. Убедитесь, что автором ключа API является администратор DocSpace, и попробуйте подключиться снова.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "Неверный ключ API. Проверьте области действия ключа API в DocSpace и попробуйте подключиться снова.",
+  "settings.connection.saving.ok": "Настройки подключения ONLYOFFICE DocSpace успешно сохранены. Теперь вы можете перейти к авторизации.",
+  "settings.connection.status.connected": "Ваш DocSpace успешно подключен",
+  "settings.connection.disconnection.description": "Если вы нажмете кнопку «Отключить», у вас не будет доступа к ONLYOFFICE DocSpace. Это приведет к удалению связей между Комнатами и Сделками, а также к отключению всех пользователей.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace успешно отключен",
   "settings.connection.disconnection.error": "Не удалось отключить ONLYOFFICE DocSpace",
   "settings.connection.title": "Настройте подключение приложения ONLYOFFICE DocSpace",
   "settings.connection.subtitle.connect": "Подключите ваш ONLYOFFICE DocSpace к Pipedrive",
   "settings.connection.subtitle.change": "Измените адрес или отключите свой ONLYOFFICE DocSpace от Pipedrive",
   "settings.connection.inputs.url.title": "Адрес ONLYOFFICE DocSpace",
-  "settings.connection.inputs.url.description": "",
+  "settings.connection.inputs.url.description": "Введите URL-адрес вашего DocSpace в поле выше. Например, https://yourcompany.onlyoffice.com",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API Ключ",
-  "settings.connection.inputs.api-key.tooltip": "",
+  "settings.connection.inputs.api-key.tooltip": "Перед подключением приложения перейдите в DocSpace, создайте новый ключ API и введите его здесь. Вы можете выбрать «Разрешения» (Все) или ограничить доступ, выбрав следующие области действия для корректной работы приложения: «Профиль» (Чтение), «Контакты» (Запись) и «Комнаты» (Запись).",
   "settings.connection.menu-item": "Соединение",
-  "user-guide.page.1.title": "",
-  "user-guide.page.1.step.1": "",
-  "user-guide.page.1.step.2": "",
-  "user-guide.page.1.step.3": "",
-  "user-guide.page.2.title": "",
-  "user-guide.page.2.step.1": "",
-  "user-guide.page.2.step.2": "",
-  "user-guide.page.3.title": "",
-  "user-guide.page.3.step.1": "",
-  "user-guide.page.3.step.2": "",
-  "user-guide.page.3.step.3": "",
-  "user-guide.page.3.step.4": ""
+  "user-guide.page.1.title": "Создать комнаты",
+  "user-guide.page.1.step.1": "Начните с создания комнаты в DocSpace непосредственно из карточки сделки в Pipedrive.",
+  "user-guide.page.1.step.2": "Каждая комната автоматически получает имя по названию сделки, например: Сделка - [название сделки]",
+  "user-guide.page.1.step.3": "Это позволяет упорядочить ваши документы и напрямую привязать их к сделке.",
+  "user-guide.page.2.title": "Синхронизировать права доступа",
+  "user-guide.page.2.step.1": "Настройте разрешения для каждого участника комнаты. Вы можете предоставить или ограничить доступ участникам команды, клиентам и внешним соавторам.",
+  "user-guide.page.2.step.2": "Это обеспечивает безопасный обмен документами и совместную работу на основе ролей.",
+  "user-guide.page.3.title": "Создайте или загрузите документы",
+  "user-guide.page.3.step.1": "После того, как комната настроена, вы можете:",
+  "user-guide.page.3.step.2": "Загрузить существующие файлы: DOCX, XLSX, PPTX, PDF и т.д.",
+  "user-guide.page.3.step.3": "Создавать новые файлы прямо в комнате: текстовые документы, электронные таблицы или презентации.",
+  "user-guide.page.3.step.4": "Все файлы сохраняются и привязываются к соответствующей сделке."
 }
